# ferrisoxide-signal

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  orchestration-plan.md  project-charter.md  project-state.md  requirements.md  risk-register.md  traceability-matrix.md
.github/: pull_request_template.md
crates/ferrisoxide-cli/: Cargo.toml  architecture.md
crates/ferrisoxide-cli/src/: main.rs
decisions/: ADR-001-initial-architecture.md  ADR-002-license-assumption.md  ADR-006-ferrisoxide-signal-identity-adoption.md
docs/: abstraction-review.md  architecture.md  brand-002-ferrisoxide-signal-rename-pipeline-report.md  brand-architecture.md  code-review.md  community-report.md  controller-in-the-loop-workflow.md  controller-io-abstraction.md  criteria-dsl.md  current-transform-metadata-mapping.md  dependency-review.md  desktop-simulation-workflow.md  docs-001-readme-product-guide-pipeline-report.md  documentation-review.md  end-user-design-review.md  environment.md  evaluation-report.md  event-validation-transforms.md  hand-off.md  implementation-report.md  m1-001-csv-parser-edge-cases.md  m10-006-transform-metadata-tests-pipeline-report.md  m12-event-validation-transform-pipeline-report.md  m13-runtime-profile-validation-issue-planning-report.md  m13-runtime-profile-validation-pipeline-report.md  m4-signal-validation-pipeline-report.md  m6-completion-pipeline-report.md  m6-measurement-engine-pipeline-report.md  m6-report-measurement-schema-pipeline-report.md  (+38 more)
examples/: basic-config.toml  (+2 more)
(+75 files in other folders)
