[package]
name = "ferrisoxide-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ferrisoxide-signal"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
toml.workspace = true
ferrisoxide-core = { path = "../ferrisoxide-core" }
ferrisoxide-plot = { path = "../ferrisoxide-plot" }
ferrisoxide-rule-schema = { path = "../ferrisoxide-rule-schema" }

[lints]
workspace = true
